--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -19,8 +19,13 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --global user.name "Github Actions"
-          git config --global user.email "williamhsieh@users.noreply.github.com"
-          git add .
-          git commit -m "chore: update daily puzzles"
-          git push
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          if git diff --quiet; then
+            echo "No changes to commit"
+            exit 0
+          else
+            git add .
+            git commit -m "chore: update daily puzzles"
+            git push
+          fi
