ci: set `GITHUB_TOKEN` to trigger subsequent workflow

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -29,3 +29,5 @@ jobs:
             git commit -m "chore: update daily puzzles"
             git push
           fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.TRIGGER_WORKFLOW }}
