--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.TRIGGER_WORKFLOW }}
 
       - name: Generate file
         run: |
@@ -29,5 +31,3 @@ jobs:
             git commit -m "chore: update daily puzzles"
             git push
           fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.TRIGGER_WORKFLOW }}
